Deduplicate calculus applicability schemas